<resources>
    <string name="app_name">MyPlacesSecondTime</string>
    <string name="settings">Settings</string>
    <string name="show_map">Show map</string>
    <string name="new_place">New place</string>
    <string name="my_places_list">My places</string>
    <string name="about">About</string>
    <string name="about_content">
        <i>My places</i> is the application that will help you remember characteristic and locations of your favorite places.
        It will be able to show places on map and enable you to share them with your friends. Each week this application will be better and
        better and you will earn <i>points</i> from your teaching assistant.
    </string>
    <string name="ok">OK</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <string name="editmyplace_name_label">Name:</string>
    <string name="editmyplace_description_label">Description:</string>
    <string name="editmyplace_finish_label">Finish</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="viewmyplace_finished_label">OK</string>
    <string name="title_activity_my_places_maps">Map</string>
    <string name="editmyplace_lat_label">Latitude:</string>
    <string name="editmyplace_lon_label">Longitude:</string>
    <string name="editmyplace_location_label">Get Location</string>
</resources>
