<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/settings_item"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings"/>

    <item
        android:id="@+id/new_place_item"
        android:title="@string/new_place"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new"/>
    <item
        android:id="@+id/my_places_list_item"
        android:title="@string/my_places_list"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_view_as_list"/>
    <item
        android:id="@+id/about_item"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about"/>



</menu>